--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "docker:compose": "docker-compose up -d"
+    "docker:compose": "docker-compose up -d",
+    "format:write": "prettier . --write",
+    "format:check": "prettier . --check"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
@@ -48,7 +50,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
     "postcss": "^8.4.39",
-    "prettier": "^3.3.2",
+    "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.3",
